[package]
name = "runin"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Minimal CLI utility for selecting a project directory with fd/fzf and running a command within it."
repository = "https://github.com/MiguelRegueiro/runin"
homepage = "https://github.com/MiguelRegueiro/runin"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
shell-words = "1"
